<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="sugest_update_title">Update available</string>
    <string name="sugest_update_message">New update available on Google Play, please update your version</string>
    <string name="force_update_title">Update available</string>
    <string name="force_update_message">New update available on Google Play, please update your version</string>
    <string name="update_ok">Update</string>
    <string name="update_no">Not now</string>
    <string name="app_name">#Messages</string>
    <string name="in_app_name">Messages</string>
    <string name="splash_app_name">SMS Messages</string>
    <string name="loading_msg">Please wait...</string>
    <string name="ads_loading_msg">Ad Showing...</string>
    <string name="shortcut_compose_long_label">New conversation</string>
    <string name="shortcut_compose_short_label">Compose</string>
    <string name="shortcut_compose_disabled_message">Shortcut disabled</string>
    <string name="title_archived">Archived Messages</string>
    <string name="title_settings">Settings</string>
    <string name="title_notification_prefs">Notifications</string>
    <string name="title_theme">Theme</string>
    <string name="title_conversations">Search numbers,names &amp; more</string>
    <string name="title_compose">Type a name or  Phone number</string>
    <string name="setup_skip">Skip</string>
    <string name="setup_next">Continue</string>
    <string name="menu_add_person">Add person</string>
    <string name="menu_call">Call</string>
    <string name="menu_info">Details</string>
    <string name="menu_save">Save to gallery</string>
    <string name="menu_share">Share</string>
    <string name="main_drawer_open_cd">Open navigation drawer</string>
    <string name="main_title_selected">%d selected</string>
    <string name="main_menu_clear">Clear</string>
    <string name="main_menu_archive">Archive</string>
    <string name="main_menu_unarchive">Unarchive</string>
    <string name="main_menu_delete">Delete</string>
    <string name="main_menu_add_contact">Add to contacts</string>
    <string name="main_menu_pin">Pin to top</string>
    <string name="main_menu_unpin">Unpin</string>
    <string name="main_menu_read">Mark as read</string>
    <string name="main_menu_unread">Mark as unread</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="main_menu_block">Block</string>
    <string name="main_syncing">Organizing messages...</string>
    <string name="main_sender_you">You: %s</string>
    <string name="main_draft">Draft: %s</string>
    <string name="main_message_results_title">Results in messages</string>
    <string name="main_message_results">%d messages</string>
    <string name="inbox_empty_text">Your conversations will appear here</string>
    <string name="inbox_search_empty_text">No results</string>
    <string name="archived_empty_text">No archived conversations yet..</string>
    <string name="main_fab_cd">Start new conversation</string>
    <string name="main_default_sms_title">Love to Message ?</string>
    <string name="main_default_sms_message">Make SMS app your default SMS app</string>
    <string name="main_default_sms_change">Change</string>
    <string name="main_permission_required">Permission required</string>
    <string name="main_permission_sms">SMS needs permission to send and view SMS messages</string>
    <string name="main_permission_contacts">SMS needs permission to view your contacts</string>
    <string name="main_permission_allow">Allow</string>
    <string name="main_permission_allow_read">Allow Read and Write Permisson</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_archived">Archived</string>
    <string name="drawer_scheduled">Scheduled Message</string>
    <string name="drawer_blocking">Blocked List</string>
    <string name="drawer_calldorado">Caller Settings</string>
    <string name="drawer_more">More</string>
    <string name="drawer_group">Group message</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_remove_ads">Remove Ads</string>
    <string name="drawer_help">Help &amp; feedback</string>
    <string name="drawer_invite">Invite friends</string>
    <string name="dialog_delete_title">Delete</string>
    <plurals name="dialog_delete_conversion">
        <item quantity="one">Are you sure you would like to delete this conversation?</item>
        <item quantity="other">Are you sure you would like to delete %d conversations?</item>
    </plurals>
    <string-array name="message_options">
        <item>Copy text</item>
        <item>Forward</item>
        <item>Delete</item>
    </string-array>
    <string name="compose_number_picker_title">Choose a phone number</string>
    <string name="compose_number_picker_default">%s ∙ Default</string>
    <string name="compose_number_picker_once">Just once</string>
    <string name="compose_number_picker_always">Always</string>
    <string name="compose_title_selected">%d selected</string>
    <string name="compose_subtitle_results">%1$d of %2$d results</string>
    <string name="contact_selected">%1$d of %2$d Selected</string>
    <string name="compose_send_group_title">Send as group message</string>
    <string name="compose_send_group_summary">Recipients and replies will be visible to everyone</string>
    <string name="compose_messages_empty"> Start of your conversation. Say something great!</string>
    <string name="compose_vcard_label">Contact card</string>
    <string name="compose_scheduled_for">Scheduled for</string>
    <string name="compose_scheduled_future"> time should be in the future!</string>
    <string name="compose_scheduled_toast">Added to scheduled messages</string>
    <string name="compose_hint">Write Here…</string>
    <string name="compose_menu_copy">Copy text</string>
    <string name="compose_menu_forward">Forward</string>
    <string name="compose_menu_delete">Delete</string>
    <string name="compose_menu_previous">Previous</string>
    <string name="compose_menu_next">Next</string>
    <string name="compose_menu_clear">Clear</string>
    <string name="compose_details_title">Message details</string>
    <string name="compose_details_type">Type: %s</string>
    <string name="compose_details_from">From: %s</string>
    <string name="compose_details_to">To: %s</string>
    <string name="compose_details_subject">Subject: %s</string>
    <string name="compose_details_priority">Priority: %s</string>
    <string name="compose_details_size">Size: %s</string>
    <string name="compose_details_sent">Sent: %s</string>
    <string name="compose_details_received">Received: %s</string>
    <string name="compose_details_delivered">Delivered: %s</string>
    <string name="compose_details_error_code">Error code: %d</string>
    <string name="compose_attach_cd">Add an attachment</string>
    <string name="compose_gallery_cd">Attach a photo</string>
    <string name="compose_camera_cd">Take a photo</string>
    <string name="compose_schedule_cd">Schedule message</string>
    <string name="compose_contact_cd">Attach a contact</string>
    <string name="compose_contact_error">Error reading contact</string>
    <string name="compose_sim_cd">%s selected, change SIM card</string>
    <string name="compose_send_cd">Send message</string>
    <string name="message_status_sending">Sending…</string>
    <string name="message_status_delivered">Delivered %s</string>
    <string name="message_status_failed">Failed to send</string>
    <string name="info_title">Contact Details</string>
    <string name="info_copied_address">Address copied</string>
    <string name="info_name">Conversation title</string>
    <string name="info_notifications">Notifications</string>
    <string name="info_theme">Theme</string>
    <string name="info_archive">Archive</string>
    <string name="info_unarchive">Unarchive</string>
    <string name="info_block">Block</string>
    <string name="info_unblock">Unblock</string>
    <string name="info_delete">Delete conversation</string>
    <string name="gallery_error">Couldn\'t load media</string>
    <string name="gallery_toast_saved">Saved to gallery</string>
    <string name="backup_title">Backup and restore</string>
    <string name="backup_backing_up">Backing up messages</string>
    <string name="backup_restoring">Restoring from backup</string>
    <string name="backup_last">Last backup</string>
    <string name="backup_loading">Loading…</string>
    <string name="backup_never">Never</string>
    <string name="backup_restore_title">Restore</string>
    <string name="backup_restore_summary">Select a backup</string>
    <string name="backup_restore_error_plus">Please unlock SMS+ to use backup and restore</string>
    <string name="backup_restore_error_backup">Backup in progress…</string>
    <string name="backup_restore_error_restore">Restore in progress…</string>
    <string name="backup_restore_confirm_title">Restore from backup</string>
    <string name="backup_restore_confirm_message">Are you sure you would like to restore your messages from this backup?</string>
    <string name="backup_restore_stop_title">Stop restore</string>
    <string name="backup_restore_stop_message">Messages that have already been restored will remain on your device</string>
    <string name="backup_restore_dialog_title">Backups</string>
    <string name="backup_restore_dialog_summary">/SMS Messages/Backups</string>
    <string name="backup_restore_dialog_empty">No backups found</string>
    <plurals name="backup_message_count">
        <item quantity="zero">No messages</item>
        <item quantity="one">%d message</item>
        <item quantity="other">%d messages</item>
    </plurals>
    <string name="backup_disclaimer">Until now ,We only supported SMS by Backup and Restore!</string>
    <string name="backup_now">Backup</string>
    <string name="backup_progress_parsing">Parsing backup…</string>
    <string name="backup_progress_running" formatted="false">%d/%d messages</string>
    <string name="backup_progress_saving">Saving backup…</string>
    <string name="backup_progress_syncing">Syncing messages…</string>
    <string name="backup_progress_finished">Finished!</string>
    <string name="backup_notification_channel_name">Backup and restore</string>
    <string name="settings_night_title">Night mode</string>
    <string name="settings_text_size_title">Font size</string>
    <string name="Rate">Rate us</string>
    <string-array name="Language">
        <item>en</item>
        <item>fr</item>
        <item>hi</item>
        <item>vi</item>
    </string-array>
    <string name="settings_mms_size_title">Auto-compress MMS attachments</string>
    <string name="settings_sync_title">Sync messages</string>
    <string name="settings_sync_summary">Re-sync your messages with the native Android SMS database</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="drawer_feedback">Send feedback</string>
    <string name="messages">Messages</string>
    <string name="battery_dialog"> Don\'t want to miss Important Sms? \n
    Turn off battery optimisation</string>
    <string name="reason_to_change_battery_optimization_setting">Navigate to App Info &gt; Advanced &gt; Battery Optimisation \nand select ‘Don’t optimise’</string>
    <string name="payment_card_title">Chat now!</string>
    <string name="payment_card_price"><![CDATA[3-day free, %s / %s]]></string>
    <string name="payment_card_button">Try now for free</string>
    <string name="payment_card_hight_light">Secured with Play Store</string>
    <string name="payment_card_auto_renew">auto renewable subscription, cancel anytime</string>
    <string name="pro">Pro</string>
</resources>