<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"

    android:elevation="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="?android:attr/divider" />

        <com.messaging.textrasms.manager.common.widget.PreferenceView
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:icon="@drawable/ic_people_black_24dp"
            app:title="@string/info_name" />

        <com.messaging.textrasms.manager.common.widget.PreferenceView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_notifications_black_24dp"
            app:title="@string/info_notifications" />

        <com.messaging.textrasms.manager.common.widget.PreferenceView
            android:id="@+id/archive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_archive_black"
            app:title="@string/info_archive" />

        <com.messaging.textrasms.manager.common.widget.PreferenceView
            android:id="@+id/block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_block_black_24dp"
            app:title="@string/info_block" />

        <com.messaging.textrasms.manager.common.widget.PreferenceView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/delete"
            app:title="@string/info_delete" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/divider" />

    </LinearLayout>
</androidx.cardview.widget.CardView>