<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/battery_dialog"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6sp"
        android:text="@string/reason_to_change_battery_optimization_setting"
        android:textStyle="normal" />

    <Button
        android:id="@+id/go_to_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:background="@color/tools_theme"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/main_permission_allow"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal" />
</LinearLayout>
