<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_16sdp">

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/poppins"
        android:text="Privacy Policy"
        android:textAlignment="textEnd"
        android:textColor="#767676"
        android:textSize="9sp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_terms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/poppins"
        android:text=" Terms &amp; Conditions"
        android:textColor="#767676"
        android:textSize="9sp"
        android:paddingStart="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/tv_privacy" />

    <LinearLayout
        android:id="@+id/btn_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_payment_hight_light"
        android:layout_height="@dimen/_32sdp"
        android:paddingHorizontal="@dimen/_12sdp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_verify"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:layout_marginStart="4dp"
            android:textAlignment="center"
            android:text="@string/payment_card_hight_light"
            android:textColor="#007DFF"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_buy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/new_button"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/payment_card_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_cancel_anytime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/payment_card_auto_renew"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_2sdp"
        android:text="@string/payment_card_price"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cancel_anytime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_title_pre"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44sdp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_title_suf"
        android:fontFamily="@font/avenir_bold"
        android:textStyle="bold"
        android:textSize="42sp"
        android:layout_marginBottom="-5dp"
        android:text="@string/payment_card_title"
        android:textColor="#FF8A00"/>

    <TextView
        android:id="@+id/txt_title_suf"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44sdp"
        android:includeFontPadding="false"
        android:lineSpacingExtra="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_desc"
        android:fontFamily="@font/avenir_bold"
        android:layout_marginBottom="@dimen/_12sdp"
        android:paddingTop="-5dp"
        android:textStyle="bold"
        android:textSize="42sp"
        android:text="@string/payment_card_title"
        android:textColor="#151D2A"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_pre"
        app:layout_constraintBottom_toTopOf="@id/txt_title_pre"
        app:lottie_rawRes="@raw/anim_payment_card"
        app:lottie_autoPlay="true"
        android:padding="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:lottie_loop="true"/>

    <TextView
        android:id="@+id/tv_app_name_pre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/avenir_bold"
        android:textAlignment="viewStart"
        android:textStyle="normal"
        android:textSize="42sp"
        android:text="@string/messages"
        android:textColor="#FF8A00"/>

    <TextView
        android:id="@+id/tv_app_name_suf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintStart_toEndOf="@id/tv_app_name_pre"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/avenir_bold"
        android:textAlignment="viewStart"
        android:textStyle="normal"
        android:textSize="42sp"
        android:text="@string/pro"
        android:paddingStart="@dimen/_5sdp"
        android:textColor="#FF8A00"/>

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="x"
        android:textAlignment="center"
        android:textColor="#B7B7B7"
        android:textSize="22sp"
        android:padding="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>